<resources>
    <string name="app_name">物联助手</string>
    <string name="action_settings">Settings</string>
    <string name="gps_info">GPS信息</string>
    <string name="wru_1801">WRU-1901</string>
    <string name="wru_2000">WRU-2000</string>
    <string name="wru_2800">WRU-2800</string>
    <string name="wru_2100">WRU-2100</string>
    <string name="wru_2801">WRU-2801</string>
    <string name="rtu_2800">RTU-2800</string>
    <string name="rtu_2801">RTU-2801</string>
    <string name="wru_3800">RTU-3800</string>
    <string name="lru_3000">LRU-3000</string>
    <string name="rcm_2000">VCM-2000</string>
    <string name="virtual_message">虚拟报文</string>
    <string name="port_test">端口测试</string>
    <string name="small_tools">小工具</string>
    <string name="re_connect">重新连接</string>
    <string name="System_board_settings">系统板设置</string>
    <string name="Function_board_settings">功能板设置</string>
    <string name="PTZ_settings">云台设置</string>
    <string name="element_search">数据查询</string>
    <string name="basic_search">基本查询</string>
    <string name="device_search">设备状态</string>
    <string name="camera_search">摄像头状态</string>
    <string name="system_params_search">系统参数查询</string>
    <string name="comm_status_search">通信状态</string>
    <string name="sensor_status_search">传感器状态</string>
    <string name="read_image">接收图片</string>
    <string name="historical_data">历史数据</string>
    <string name="system_params_setting">系统参数设置</string>
    <string name="collect_setting">采集要素设置</string>
    <string name="comm_params_setting">通信参数设置</string>
    <string name="channel_setting">信道设置</string>
    <string name="camera_setting">摄像头设置</string>
    <string name="ad_setting">AD设置</string>
    <string name="ather_setting">其他参数设置</string>
    <string name="sensor_setting">传感器设置</string>
    <string name="Failed_to_send_data">数据发送失败！</string>
    <string name="groundwater_basic_setting">常规设置</string>
    <string name="groundwater_sensor_type_setting">传感器型号设置</string>
    <string name="groundwater_addr_setting">遥测站地址设置</string>
    <string name="groundwater_server_setting">服务器设置</string>
    <string name="groundwater_depth">地下水埋深设置</string>
    <string name="groundwater_rtc">RTC时间设置</string>
    <string name="groundwater_current_para">当前电压</string>
    <string name="groundwater_all">全部参数</string>
    <string name="groundwater_time">时间</string>
    <string name="groundwater_net_value">网络信号值</string>
    <string name="rain_pamars">雨量参数</string>
    <string name="water_pamars">水位参数</string>
    <string name="water_plan">水位计</string>
    <string name="camera">摄像头</string>
    <string name="gprs_plan">流量计</string>
    <string name="zawei_plan">闸位计</string>
    <string name="Manometer">压力计</string>
    <string name="ather_pamars">其他参数</string>
    <string name="System_board_parameter">系统板参数</string>
    <string name="Function_board_parameter">功能板参数</string>
    <string name="shangqing">墒情</string>
    <string name="gprs_pamars">GPRS信道设置</string>
    <string name="gms_pamars">短信信道设置</string>
    <string name="bei_pamars">北斗信道设置</string>
    <string name="channel_select">信道选择</string>
    <string name="server_number">服务器编号</string>
    <string name="server_1">1</string>
    <string name="server_2">2</string>
    <string name="server_3">3</string>
    <string name="server_4">4</string>
    <string name="center">中心站</string>
    <string name="center_1_">中心站1</string>
    <string name="center_2">中心站2</string>
    <string name="center_3">中心站3</string>
    <string name="center_4">中心站4</string>
    <string name="site_test_address">遥测站地址</string>
    <string name="gate_meter_address">闸位计lora模块地址</string>
    <string name="xingzheng_num">行政区划码</string>
    <string name="device_id">设备ID号</string>
    <string name="ground_setting">地下水埋深</string>
    <string name="setting">设置</string>
    <string name="reset">重启设备</string>
    <string name="sam_gate_now">立即采集lora闸位</string>
    <string name="site_type">站点类型</string>
    <string name="operation_status">运行状态</string>
    <string name="site_num_type">站号类型</string>
    <string name="output_status">串口输出模式</string>
    <string name="sensor_type">传感器型号</string>
    <string name="current_time">当前时间</string>
    <string name="rtu_time">设备时间</string>
    <string name="no_use">禁用</string>
    <string name="gprs">流量</string>
    <string name="gprs_gsm">GPRS+GSM</string>
    <string name="sms">短信</string>
    <string name="beidou">北斗</string>
    <string name="low_power">低功耗</string>
    <string name="always_online">永在线</string>
    <string name="site_num_8">8位站号</string>
    <string name="site_num_10">10位站号</string>
    <string name="send_info">打印调试信息</string>
    <string name="no_send_info">不打印调试信息</string>
    <string name="collect_time">采集发送间隔</string>
    <string name="rain_params">雨量参数</string>
    <string name="water_params">水位参数</string>
    <string name="camera_params">摄像头参数</string>
    <string name="water_level">水位计参数</string>
    <string name="dingshibao_jiange">定时报间隔</string>
    <string name="zhao_mode">召测模式</string>
    <string name="zhaoce">召测</string>
    <string name="no_call_test">不召测</string>
    <string name="center_1_channel">中心站1\n主信道</string>
    <string name="center_2_channel">中心站2\n主信道</string>
    <string name="center_3_channel">中心站3\n主信道</string>
    <string name="center_4_channel">中心站4\n主信道</string>
    <string name="center_1_channel1">中心站1主信道</string>
    <string name="center_2_channel1">中心站2主信道</string>
    <string name="center_3_channel1">中心站3主信道</string>
    <string name="center_4_channel1">中心站4主信道</string>
    <string name="recenter_1_channel1">中心站1备用信道</string>
    <string name="recenter_2_channel1">中心站2备用信道</string>
    <string name="recenter_3_channel1">中心站3备用信道</string>
    <string name="recenter_4_channel1">中心站4备用信道</string>
    <string name="recenter_1_channel">中心站1\n备用信道</string>
    <string name="recenter_2_channel">中心站2\n备用信道</string>
    <string name="recenter_3_channel">中心站3\n备用信道</string>
    <string name="recenter_4_channel">中心站4\n备用信道</string>
    <string name="camera_type">摄像头类型</string>
    <string name="day_type">白天型</string>
    <string name="night_type">夜视型</string>
    <string name="no">无</string>
    <string name="camera_dip">摄像头分辨率</string>
    <string name="dip_320_240">640*480</string>
    <string name="dip_640_480">1024*768</string>
    <string name="dip_1280_960">1600*1200</string>
    <string name="send_img">发送图片</string>
    <string name="send_img2">发送图片2</string>
    <string name="rain_dip_power">雨量计分辨力</string>
    <string name="rain_1mm">1mm</string>
    <string name="rain_0_5mm">0.5mm</string>
    <string name="rain_0_2mm">0.2mm</string>
    <string name="rain_add_value">雨量加报阈值</string>
    <string name="limit_1_99">1-99</string>
    <string name="mm">mm</string>
    <string name="update">更新</string>
    <string name="comm_status_3">通信状态3</string>
    <string name="comm_status_2">通信状态2</string>
    <string name="comm_status_1">通信状态1</string>
    <string name="cmd_status_3">运行状态3</string>
    <string name="runtime_status_2">运行状态2</string>
    <string name="runtime_status_1">运行状态1</string>
    <string name="data">数据</string>
    <string name="status_2">状态2</string>
    <string name="status_1">状态1</string>
    <string name="rain_count">雨量</string>
    <string name="ground_flow">流量</string>
    <string name="water_count">水位</string>
    <string name="zhawei">闸位</string>
    <string name="flow_meter">流速</string>
    <string name="under_ground_water">地下水</string>
    <string name="image">图片</string>
    <string name="ground_t">地温</string>
    <string name="comm_test">通信测试</string>
    <string name="save_and_restart">保存设置并重启</string>
    <string name="restart">恢复出厂设置</string>
    <string name="ad_way">AD路数</string>
    <string name="limit_1_8">1-8</string>
    <string name="ad_la">AD电流校准大值</string>
    <string name="ad_la_smart">AD电流校准小值</string>
    <string name="ad_lv_big">AD电压校准大值</string>
    <string name="ad_lv_small">AD电压校准小值</string>
    <string name="ground_ad_up_v">注：请先将电源调至14V</string>
    <string name="ground_collect_ad_up_v">采集14V电压标定值</string>
    <string name="ground_collect_ad_down_v">采集11V电压标定值</string>
    <string name="ground_ad_down_v">注：请先将电源调至11V</string>
    <string name="current_lv">当前电压：</string>
    <string name="v">V</string>
    <string name="collect_wait_time">采集等待时间</string>
    <string name="low_lv_value">低电压报警值</string>
    <string name="water_plan_type">水位计类型</string>
    <string name="moni_count">模拟量</string>
    <string name="moni_n_lvbo">模拟量滤波系数</string>
    <string name="limit_0_1_00">0-1.00</string>
    <string name="m">m</string>
    <string name="moni_n_water">模拟量水位计量程</string>
    <string name="moni_n_water_select">模拟量水位计选择</string>
    <string name="select_485_n_water">485水位计选择</string>
    <string name="min">min</string>
    <string name="water_n_dip_plow">水位计分辨力</string>
    <string name="value_1cm">1cm</string>
    <string name="value_0_1cm">0.1cm</string>
    <string name="add_water">加报水位</string>
    <string name="limit_0_99_99">0-99.99</string>
    <string name="ad_water_value">加报水位上加报阈值</string>
    <string name="add_water_down_value">加报水位下加报阈值</string>
    <string name="photo_water_up">水位拍照上阈值</string>
    <string name="photo_water_down">水位拍照下阈值</string>
    <string name="add_time">加报时间间隔</string>
    <string name="limit_0_59">0-59</string>
    <string name="water_am_value">水位修正值</string>
    <string name="water_basic_value">水位基值</string>
    <string name="center_1">"中心站1 "</string>
    <string name="beidou_channel">北斗信道:</string>
    <string name="beidou_number">北斗号码:</string>
    <string name="gprs_channel">GPRS信号信道:</string>
    <string name="ip_">IP:</string>
    <string name="port">端口:</string>
    <string name="sms_channel">短信信道:</string>
    <string name="sms_number">短信号码:</string>
    <string name="camera_status">摄像头状态</string>
    <string name="water_soil_sensor_sel">墒情传感器选择</string>
    <string name="water_soil_model">模拟量</string>
    <string name="water_soil_rs_485">RS-485</string>
    <string name="water_soil_485_sensor_sel">485墒情传感器选择</string>
    <string name="water_soil_river">银河</string>
    <string name="water_soil_0">墒情0次方系数</string>
    <string name="water_soil_1">墒情1次方系数</string>
    <string name="water_soil_2">墒情2次方系数</string>
    <string name="water_soil_3">墒情3次方系数</string>
    <string name="water_soil_1_type">墒情1类型</string>
    <string name="water_soil_2_type">墒情2类型</string>
    <string name="water_soil_3_type">墒情3类型</string>
    <string name="water_soil_4_type">墒情4类型</string>
    <string name="water_soil_5_type">墒情5类型</string>
    <string name="water_soil_6_type">墒情6类型</string>
    <string name="flow_485">485流量计</string>
    <string name="flow_485_new">485流量计(新)</string>
    <string name="flow_type">流量计类型</string>
    <string name="weir_code_number">堰槽码号</string>
    <string name="flow_type_1">485</string>
    <string name="zha_add_value">闸位加报阈值</string>
    <string name="model_zha_range">模拟量闸位量程</string>
    <string name="model_zha_type">模拟量闸位计类型</string>
    <string name="model_zha_type_1">0-5V</string>
    <string name="model_zha_type_2">0-10V</string>
    <string name="model_zha_type_3">0-20V</string>
    <string name="model_zha_type_4">4-20mA</string>
    <string name="zha_plan_type">闸位计类型</string>
    <string name="zha_plan_type_1">模拟量</string>
    <string name="zha_plan_type_2">485</string>
    <string name="zha_plan_485">485闸位计 </string>
    <string name="zha_plan_485_1">伟思</string>
    <string name="zha_plan_485_2">海河</string>
    <string name="zha_plan_485_3">南水</string>
    <string name="Relay_switch1">继电器开关1</string>
    <string name="Relay_switch2">继电器开关2</string>
    <string name="Relay_switch3">继电器开关3</string>
    <string name="Relay_switch4">继电器开关4</string>
    <string name="Temp_type">温度传感器类型</string>
    <string name="Valve_type">阀门类型</string>
    <string name="Butterfly_valve">蝶阀</string>
    <string name="Pulse_solenoid_valve">脉冲电磁阀</string>
    <string name="DI_butterfly_valve">485转DI蝶阀</string>
</resources>