<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <LinearLayout
        android:id="@+id/qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/ad_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ground_collect_ad_up_v"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ground_ad_up_v"
            android:textColor="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ww"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qq"
        android:layout_marginTop="@dimen/x20"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/ad_down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ground_collect_ad_down_v"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ground_ad_down_v"
            android:textColor="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ww"
        android:layout_marginTop="@dimen/x20"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/current_lv"
            android:textColor="@color/black"
            android:textSize="@dimen/x35"/>

        <TextView
            android:id="@+id/current_lv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/x35"/>

    </LinearLayout>

</RelativeLayout>