<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Temp_type"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/temp_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/temp_type_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_bg"
                android:text="@string/zha_plan_type_1"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/temp_type_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x20"
                android:button="@drawable/radio_bg"
                android:text="@string/flow_type_1"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/temp_type_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x20"
                android:button="@drawable/radio_bg"
                android:checked="false"
                android:text="@string/no"
                android:textColor="@color/black"/>
        </RadioGroup>
    </LinearLayout>





</LinearLayout>